# WebKreditSniper

./: .gitignore  main.py  pyproject.toml
webkredit/: api.py  cli.py  models.py
